<resources>
    <string name="app_name">language</string>
    <string name="app_logo_desc">Language App</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">"The limits of my language mean the limits of my world"</string>
    <string name="email_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="list_of_languages">List of languages</string>
    <string name="languages">Languages</string>

</resources>